# oolong-pairs

./: .gitignore  README.md  pyproject.toml
.claude/: documentation-review.local.md  github-social.local.md
docs/: API-REFERENCE.md  CONTRIBUTING.md  CUSTOMIZATION.md  HOOKS-GUIDE.md  QUICKSTART.md
hooks/: hooks.json  session_start.py  stop.py
src/oolong_pairs/: __init__.py  cli.py  dataset.py  models.py  orchestrator.py  scoring.py  storage.py  strategies.py
tests/: __init__.py  test_scoring.py
