[project]
name = "oolong-pairs"
version = "0.1.0"
description = "OOLONG-Pairs benchmark harness for Claude Code plugin testing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "zircote"}]
dependencies = [
    "click>=8.0",
    "datasets>=2.14",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
oolong-pairs = "oolong_pairs.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oolong_pairs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
